Project wrapping fixed.
Fixed a problem where images from projects overlapped when the screen got to small. TODO: Should change layout on phone. Images too small and h1s overlap.

--- a/src/Stylesheets/Header.css
+++ b/src/Stylesheets/Header.css
@@ -5,7 +5,7 @@
 
 .Header {
     padding: 2rem;
-    background-color: #3498DB;
+    background-color:  #2980B9;
     color: #ECF0F1;
 }
 
