--- a/src/Stylesheets/ListOfProjects.css
+++ b/src/Stylesheets/ListOfProjects.css
@@ -1,5 +1,6 @@
 .ListOfProjects {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     margin: 2rem 0;
 }
